<resources>
    <string name="app_name">RSSIBTv1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    //config_bt_screen
    <string name="btn_delete">Delete</string>
    <string name="room">Room: </string>
    <string name="building">Building: </string>
    <string name="size">Size:</string>
    <string name="title">RSSI BT</string>
    <string name="room_width">width</string>
    <string name="room_height">height</string>
    <string name="btn_next">Next</string>


    //choose_bt_screen
    <string name="building_name"></string>
    <string name="room_name"></string>
    <string name="title_activity_get_intent_extra">GetIntentExtraActivity</string>
    <string name="title_activity_building">BuildingActivity</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="title_activity_bt">BTActivity</string>
    <string name="title_activity_measurements">MeasurementsActivity</string>

</resources>
