<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="0.63">

    <TextView
        android:text="@string/building"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:textSize="20dp" />

    <EditText

        android:layout_x="150px"
        android:layout_y="150px"
        android:width="400px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dropdown_building_list"
        />


</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.66">

        <TextView
            android:text="@string/room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20dp" />

        <EditText

            android:layout_x="150px"
            android:layout_y="150px"
            android:width="400px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dropdown_room_list"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.40">

        <TextView
           android:text="@string/size"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
            android:paddingLeft="20dp"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.53">

        <LinearLayout
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/room_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/room_width"
                android:layout_gravity="center"
                android:paddingTop="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/room_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="20dp" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/room_height"
                android:paddingTop="10dp"
            />
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="161dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_nextOrLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        </LinearLayout>


</LinearLayout>